fixed sizing issues still havent figured out submit button on mobile yet

--- a/src/components/Forecast/Forecast.css
+++ b/src/components/Forecast/Forecast.css
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem 0;
-    font-size: clamp(1rem, 2.5rem, 4rem);
+    font-size: clamp(1rem, 2rem, 4rem);
 }
 
 .forecast-left img {
@@ -25,6 +25,17 @@
     justify-content: space-around;
     align-items: center;
     font-size: clamp(1rem, 2rem, 3.5rem);
-    /* line-height: 4rem; */
-    
+}
+
+.speed {
+    font-size: 1rem;
+}
+
+@media (max-width: 500px) {
+    .forecast-left {
+        font-size: 1.5rem;
+    }
+    .forecast-right {
+        font-size: 1.5rem;
+    }
 }
